Created network notification & some styles refactoring

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -32,7 +32,7 @@
   --sidebar-delta: calc(
     var(--opened-sidebar-width) - var(--closed-sidebar-width)
   );
-  --sidebar-offset: 0;
+  --sidebar-offset: 0px;
 
   // Page
   --page-min-height: 40rem;
