--- a/src/components/Menu/Menu.style.scss
+++ b/src/components/Menu/Menu.style.scss
@@ -14,4 +14,20 @@
       @include positioning($inline: var(--spacing), $inlineDir: "end");
     }
   }
+
+  .searchField {
+    --fill-color: var(--c-gray-300);
+
+    .icon {
+      width: 1.25rem;
+    }
+
+    &:focus-within {
+      --fill-color: var(--c-primary-300);
+    }
+
+    .FieldWrapper {
+      gap: var(--spacing-m);
+    }
+  }
 }
