--- a/src/pages/Students/StudentList/StudentList.style.scss
+++ b/src/pages/Students/StudentList/StudentList.style.scss
@@ -19,6 +19,10 @@
 
     &.name {
       text-transform: capitalize;
+
+      * {
+        text-transform: capitalize;
+      }
     }
 
     &.buttonCell {
