--- a/src/components/Ellipsis/Ellipsis.style.scss
+++ b/src/components/Ellipsis/Ellipsis.style.scss
@@ -8,30 +8,20 @@
     align-items: center;
     justify-content: center;
 
-    span {
-      --ellipsis-width: 1.375rem;
-
-      &:first-child,
-      &:last-child {
+    & > span {
+      &.start,
+      &.end {
         display: inline-block;
-        max-width: calc(50% - var(--ellipsis-width) / 2);
+        flex: 1;
         overflow-x: hidden;
         white-space: nowrap;
         text-overflow: "";
       }
 
-      &:nth-child(2) {
-        width: var(--ellipsis-width);
-      }
-
-      &:last-child {
-        &[dir="rtl"] {
-          direction: ltr;
-        }
-
-        &[dir="ltr"] {
-          direction: rtl;
-        }
+      &.sizeMeasure {
+        white-space: nowrap;
+        position: absolute;
+        opacity: 0;
       }
     }
   }
@@ -40,5 +30,16 @@
     overflow-x: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+  }
+
+  &.end,
+  & > .end {
+    &[dir="rtl"] {
+      direction: ltr;
+    }
+
+    &[dir="ltr"] {
+      direction: rtl;
+    }
   }
 }
