--- a/src/context/Popup/Toast/Toast.style.scss
+++ b/src/context/Popup/Toast/Toast.style.scss
@@ -12,7 +12,7 @@
   background-color: var(--toast-bg-color);
   padding: var(--spacing-s) 2.66rem;
   position: relative;
-  box-shadow: 2px 2px 3px 1px var(--c-shadow-200);
+  box-shadow: var(--drop-shadow-s);
 
   @include withBorder($borderColor: var(--toast-fg-color));
 
