--- a/src/components/Buttons/CloseButton/CloseButton.style.scss
+++ b/src/components/Buttons/CloseButton/CloseButton.style.scss
@@ -1,13 +1,13 @@
+@use "styles/abstracts/mixins" as *;
+
 .CloseButton {
   --fill-color: var(--c-gray-300);
-  background-color: var(--bg-color);
 
-  width: 2rem;
-  height: 2rem;
-  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  @include circle(2rem, var(--bg-color));
 
   &:hover {
     --fill-color: var(--c-white);
