--- a/src/components/Container/Container.style.scss
+++ b/src/components/Container/Container.style.scss
@@ -8,16 +8,20 @@
   border-radius: var(--border-radius);
   position: relative;
 
+  & & {
+    --border-radius: var(--radius-s);
+  }
+
   @include desktop() {
-    --border-radius: 0.75rem;
+    --border-radius: var(--radius-xl);
 
     &:not(.flat) {
-      box-shadow: 4px 4px 16px var(--c-shadow-200);
+      box-shadow: var(--drop-shadow-l);
     }
   }
 
   &.menu {
-    --border-radius: 0.375rem;
+    --border-radius: var(--radius-s);
 
     max-width: calc(100vw - var(--spacing-l) * 2);
 
