--- a/src/components/Ellipsis/Ellipsis.style.scss
+++ b/src/components/Ellipsis/Ellipsis.style.scss
@@ -22,6 +22,7 @@
         white-space: nowrap;
         position: absolute;
         opacity: 0;
+        pointer-events: none;
       }
     }
   }
