--- a/src/hooks/Tabs/Tabs.style.scss
+++ b/src/hooks/Tabs/Tabs.style.scss
@@ -1,9 +1,8 @@
 .Tabs {
   display: flex;
-  justify-content: center;
 
   .tabButton {
-    width: 10rem;
+    flex: 1;
     font-size: 1rem;
     color: var(--c-gray-300);
     border-block-end: 2px solid transparent;
@@ -23,6 +22,11 @@
 
     &.next {
       font-weight: 600;
+    }
+
+    &,
+    * {
+      text-transform: capitalize;
     }
   }
 }
