--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -46,14 +46,18 @@ $desktopSize: 35.01rem;
     }
 
     &[dir="rtl"] {
-      --x-displacement: calc(#{$x} * -1);
+      @if $x != 0 {
+        --x-displacement: calc(#{$x} * -1);
+      }
 
       right: $inline;
     }
   } @else if $inlineDir == end {
     &[dir="ltr"],
     &:not([dir]) {
-      --x-displacement: calc(#{$x} * -1);
+      @if $x != 0 {
+        --x-displacement: calc(#{$x} * -1);
+      }
 
       right: $inline;
     }
@@ -83,7 +87,7 @@ $desktopSize: 35.01rem;
 
 @mixin withBorder(
   $states: none,
-  $borderRadius: 0.25rem,
+  $borderRadius: var(--radius-s),
   $borderColor: var(--c-gray-300)
 ) {
   --c-border: #{$borderColor};
@@ -108,18 +112,6 @@ $desktopSize: 35.01rem;
       --c-outline: var(--c-border);
     }
   }
-}
-
-// deprecated
-@mixin mainButton {
-  height: 3rem;
-  padding: 1rem 2rem;
-  border-radius: 0.25rem;
-  background-color: var(--c-success);
-  font-size: 1rem;
-  font-weight: 600;
-  color: var(--c-white);
-  text-transform: capitalize;
 }
 
 @mixin menuItem {
@@ -160,19 +152,25 @@ $desktopSize: 35.01rem;
 }
 
 @mixin sidebarAnimation($property, $delay: 0) {
-  transition-delay: $delay;
+  @if $delay != 0 {
+    transition-delay: $delay;
+  }
+
   transition-property: $property;
   transition-duration: 100ms;
   transition-timing-function: ease-in-out;
 }
 
-@mixin circle($size, $color) {
-  min-width: $size;
-  min-height: $size;
+@mixin circle($size, $color: auto) {
   width: $size;
-  height: $size;
-  background-color: $color;
+  min-width: $size;
+  max-width: $size;
+  aspect-ratio: 1;
   border-radius: 50%;
+
+  @if $color != auto {
+    background-color: $color;
+  }
 }
 
 @mixin genderColorCoding {
