--- a/src/styles/abstracts/_sizes.scss
+++ b/src/styles/abstracts/_sizes.scss
@@ -6,6 +6,14 @@ $spacing: (
   xl: 2rem,
 );
 
+$radius: (
+  xs: 0.25rem,
+  s: 0.375rem,
+  m: 0.625rem,
+  l: 0.75rem,
+  xl: 1rem,
+);
+
 $width: (
   xs: 20rem,
   s: 35rem,
