--- a/src/components/Buttons/Button/Button.style.scss
+++ b/src/components/Buttons/Button/Button.style.scss
@@ -4,12 +4,18 @@
 .Button {
   --fill-color: var(--c-gray-300);
   --text-color: var(--c-foreground);
+  --transition-duration: 0.25s;
 
   font-size: 1rem;
   display: flex;
   align-items: center;
   gap: var(--spacing-s);
   position: relative;
+  transition: color var(--transition-duration);
+
+  & > * {
+    transition: opacity var(--transition-duration);
+  }
 
   &:not(.plain-text) {
     --fill-color: var(--c-foreground);
