--- a/src/components/Icons/LoadingSpinner/LoadingSpinner.style.scss
+++ b/src/components/Icons/LoadingSpinner/LoadingSpinner.style.scss
@@ -1,8 +1,17 @@
 .LoadingSpinner {
   --stroke-color: var(--c-primary-200);
+  --spinner-size: 3rem;
 
-  width: 3rem;
-  height: 3rem;
+  width: var(--spinner-size);
+  aspect-ratio: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &.icon {
+    --stroke-color: var(--c-gray-300);
+    --spinner-size: 1.5rem;
+  }
 
   .spinner {
     animation: rotate 2s linear infinite;
