--- a/src/components/Layouts/LanguageSelector/LanguageSelector.style.scss
+++ b/src/components/Layouts/LanguageSelector/LanguageSelector.style.scss
@@ -1,5 +1,11 @@
 .LanguageSelector {
   .driver {
     --c-background: var(--c-white);
+
+    width: 3.75rem;
+
+    & > span {
+      flex: 1;
+    }
   }
 }
