--- a/src/components/Menu/Menu.style.scss
+++ b/src/components/Menu/Menu.style.scss
@@ -3,6 +3,10 @@
 .Menu {
   --icon-space: 2em;
 
+  .LoadingDots {
+    --fill-color: var(--c-gray-300);
+  }
+
   .item {
     &.withCheckMark {
       padding-inline-end: var(--icon-space);
@@ -15,19 +19,5 @@
     }
   }
 
-  .searchField {
-    --fill-color: var(--c-gray-300);
-
-    .icon {
-      width: 1.25rem;
-    }
-
-    &:focus-within {
-      --fill-color: var(--c-primary-300);
-    }
-
-    .FieldWrapper {
-      gap: var(--spacing-m);
-    }
-  }
+  @include searchField;
 }
