--- a/src/pages/Admin/Navbar/UserMenu/UserMenu.style.scss
+++ b/src/pages/Admin/Navbar/UserMenu/UserMenu.style.scss
@@ -72,7 +72,7 @@
       .navLink {
         justify-content: flex-start;
         align-items: end;
-        gap: var(--spacing-l);
+        gap: var(--spacing-m);
         text-transform: capitalize;
       }
 
