--- a/src/components/Buttons/Button/Button.style.scss
+++ b/src/components/Buttons/Button/Button.style.scss
@@ -14,6 +14,7 @@
   transition: color var(--transition-duration);
 
   & > * {
+    flex: 1;
     transition: opacity var(--transition-duration);
   }
 
