--- a/src/pages/Admin/Navbar/NavGroup/NavGroup.style.scss
+++ b/src/pages/Admin/Navbar/NavGroup/NavGroup.style.scss
@@ -26,6 +26,17 @@
     --bg-color: transparent;
     --fg-color: var(--c-gray-400);
 
+    .header {
+      padding-block-end: 0;
+
+      .label {
+        padding: var(--spacing-m) var(--spacing-l);
+        color: var(--c-primary-400);
+        font-weight: 700;
+        text-transform: capitalize;
+      }
+    }
+
     .navChild {
       display: flex;
       align-items: center;
@@ -36,6 +47,7 @@
 
       * {
         color: var(--fg-color);
+        text-transform: capitalize;
       }
 
       &:hover {
@@ -54,15 +66,37 @@
       var(--closed-sidebar-width) / 2 - var(--navbar-padding)
     );
     padding-inline-start: var(--spacing-s);
-    border-inline-start: 1px solid var(--fg-idle-color);
     display: grid;
     gap: var(--spacing-s);
 
     .navChild {
+      --link-width: var(--spacing-m);
+      --link-height: calc(100% + var(--spacing-l));
+      --link-top: calc(var(--link-height) / -2 - var(--spacing-m));
+      --link-color: var(--c-gray-200);
+
+      &:first-child {
+        --link-height: calc(50%);
+        --link-top: 0;
+      }
+
       @extend .NavItem;
       @extend .HiddenLabel;
 
+      position: relative;
       min-height: var(--nav-item-height);
+
+      &::before {
+        content: "";
+        position: absolute;
+        width: var(--link-width);
+        height: var(--link-height);
+        border-end-start-radius: var(--link-width);
+        inset-inline-start: calc(var(--link-width) * -1);
+        inset-block-start: var(--link-top);
+        border-block-end: 2px solid var(--link-color);
+        border-inline-start: 2px solid var(--link-color);
+      }
     }
   }
 }
