--- a/src/pages/Admin/Header/SearchBar/SearchBar.style.scss
+++ b/src/pages/Admin/Header/SearchBar/SearchBar.style.scss
@@ -1,3 +1,5 @@
+@use "styles/abstracts/mixins" as *;
+
 .SearchBar {
   .searchForm {
     &.MiniForm {
@@ -5,6 +7,8 @@
 
       .searchField {
         .FieldWrapper {
+          height: 2rem;
+          padding-block: var(--spacing-s);
           border-end-end-radius: 0;
           border-start-end-radius: 0;
         }
@@ -17,19 +21,5 @@
     }
   }
 
-  .searchField {
-    --fill-color: var(--c-gray-300);
-
-    .icon {
-      width: 1.25rem;
-    }
-
-    &:focus-within {
-      --fill-color: var(--c-gray-400);
-    }
-
-    .FieldWrapper {
-      gap: var(--spacing-m);
-    }
-  }
+  @include searchField;
 }
