--- a/src/context/Popup/Toast/Toast.style.scss
+++ b/src/context/Popup/Toast/Toast.style.scss
@@ -3,6 +3,8 @@
 .Toast {
   $parent: &;
 
+  --toast-countdown: 100%;
+  --toast-lifetime: 7s;
   --fill-color: var(--toast-fg-color);
   --icon-spacing: 2.66rem;
   --icon-center: calc(var(--icon-spacing) / 2);
@@ -17,8 +19,34 @@
   padding: var(--spacing-s) var(--icon-spacing);
   position: relative;
   box-shadow: var(--drop-shadow-s);
+  overflow: hidden;
 
   @include withBorder($borderColor: var(--toast-fg-color));
+
+  &:hover::after {
+    width: var(--toast-countdown);
+  }
+
+  &:not(:hover)::after {
+    animation: countdownAnimation var(--toast-lifetime) linear;
+
+    @keyframes countdownAnimation {
+      from {
+        width: var(--toast-countdown);
+      }
+      to {
+        width: 0;
+      }
+    }
+  }
+
+  &::after {
+    content: "";
+    height: var(--spacing-xs);
+    background-color: var(--toast-fg-color);
+
+    @include positioning($blockDir: end, $block: 0, $inline: 0, $x: 0, $y: 0);
+  }
 
   &.floating {
     z-index: 1000;
@@ -61,7 +89,7 @@
 
   .message {
     border-inline-start: 1px solid var(--toast-fg-color);
-    padding-inline-start: 0.4rem;
+    padding-inline-start: var(--spacing-m);
     padding-block: var(--spacing-s);
 
     &,
