--- a/src/components/Icons/SpinningArrow/SpinningArrow.style.scss
+++ b/src/components/Icons/SpinningArrow/SpinningArrow.style.scss
@@ -16,29 +16,35 @@
   &.dropdown {
     --duration: 0.35s;
     --opened-angle: 0deg;
-    --closed-angle: 180deg;
-    --open-overshoot-angle: -20deg;
-    --close-overshoot-angle: 200deg;
 
     @include rtlDir {
       --closed-angle: -180deg;
       --open-overshoot-angle: 20deg;
       --close-overshoot-angle: -200deg;
     }
+
+    @include ltrDir {
+      --closed-angle: 180deg;
+      --open-overshoot-angle: -20deg;
+      --close-overshoot-angle: 200deg;
+    }
   }
 
   &.expand {
     --duration: 0.2s;
-    --opened-angle: 180deg;
-    --closed-angle: 90deg;
-    --open-overshoot-angle: 205deg;
-    --close-overshoot-angle: 65deg;
 
     @include rtlDir {
       --opened-angle: -180deg;
       --closed-angle: -90deg;
       --open-overshoot-angle: -205deg;
       --close-overshoot-angle: -65deg;
+    }
+
+    @include ltrDir {
+      --opened-angle: 180deg;
+      --closed-angle: 90deg;
+      --open-overshoot-angle: 205deg;
+      --close-overshoot-angle: 65deg;
     }
   }
 
