WIP: Creating payments pages

--- a/src/pages/Admin/Navbar/Navbar/Navbar.style.scss
+++ b/src/pages/Admin/Navbar/Navbar/Navbar.style.scss
@@ -92,6 +92,11 @@
     }
   }
 
+  .MonyIcon {
+    --fill-color: transparent;
+    --stroke-color: var(--fg-color);
+  }
+
   .companyLogo {
     padding-block: var(--spacing-m);
 
