Fixed fader expand behavior in ltr

--- a/src/components/Animation/Fader/Fader.style.scss
+++ b/src/components/Animation/Fader/Fader.style.scss
@@ -68,7 +68,7 @@
       }
 
       @include ltrDir {
-        --x-hidden: calc(var(--x-idle) - 50%);
+        --inline-origin: left;
       }
     }
   }
