--- a/src/components/Form/InputGroup/InputGroup.style.scss
+++ b/src/components/Form/InputGroup/InputGroup.style.scss
@@ -7,7 +7,10 @@
   gap: var(--spacing-xl) var(--spacing-l);
 
   & > * {
-    flex-grow: 1;
-    flex-basis: 0;
+    flex: 1;
+  }
+
+  @include mobile {
+    display: grid;
   }
 }
