Fixed flash card width

--- a/src/components/Container/Container.style.scss
+++ b/src/components/Container/Container.style.scss
@@ -20,6 +20,10 @@
     }
   }
 
+  &.alwaysRound {
+    --border-radius: var(--radius-xl);
+  }
+
   &.menu {
     --border-radius: var(--radius-s);
 
