Added/fixed animation + made minor refactoring

--- a/src/components/Icons/Avatar/Avatar.style.scss
+++ b/src/components/Icons/Avatar/Avatar.style.scss
@@ -11,8 +11,12 @@
 
   @include circle(var(--circle-size), var(--bg-color));
 
-  .photo {
+  img {
     width: 100%;
     height: 100%;
+
+    &.hidden {
+      display: none;
+    }
   }
 }
